--- a/proof/papers.html
+++ b/proof/papers.html
@@ -62,8 +62,26 @@
             <a data-toggle="collapse" class="collapsed" href="#News17"> 2022<i class="ion-android-remove"></i></a>
             <div id="News17" class="collapse" data-parent="#News-list"> 
               <p>
-	<ul>
+			  	<ul>
+	<li><p align="justify"> <b>Izquierdo, F.</b>, Menezes, R., Wise, L., Teles-Machado, A., Garrido, S. (2022). Bayesian spatio-temporal CPUE standardization: Case study of European sardine (Sardina pilchardus) along the western coast of Portugal. Fisheries Management and Ecology, 00, 1– 11.
+ <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/fme.12556"> Link</a></p></li>	
+ 
+ 	<li><p align="justify"> <b>Pennino, M. G., Cousido-Rocha</b>, M., Maia, C., Rocha, A., Figueiredo, I., <b>Alonso-Fernández, A., ... and Cerviño, S.</b> (2022). This is what we know: Assessing the stock status of the data-poor common sole on the Iberian coast. Estuarine, Coastal and Shelf Science, 107747.
+ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272771422000075"> Link</a></p></li>	
+ 
  	<li><p align="justify"> Lima ARA; Baltazar-Soares M; Garrido S; <b>Riveiro I; Carrera P</b>; Piecho-Santos M; Peck MA; Silva G (2022). Forecasting shifts in habitat suitability across the distribution range of a temperate small pelagic fish under different scenarios of climate change. Science of The Total Environment.
+ <a href="https://www.sciencedirect.com/science/article/pii/S004896972105244X"> Link</a></p></li>	
+
+ 	<li><p align="justify"> <b>Pennino, M.G., Izquierdo, F.</b>, Paradinas, I., <b>Cousido-Rocha, M.</b>, Velasco, F., <b>Cerviño, S.</b> (2022). 
+	Identifying persistent biomass areas: The case study of the common sole in the northern Iberian waters.
+ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0165783621003246"> Link</a></p></li>	
+ 
+  	<li><p align="justify">  <b>Cousido-Rocha, M., Cerviño, S., Alonso-Fernández, A., 
+	Gil, J., González Herraiz, I., Rincón, M.M., Ramos, F., Rodríguez-Cabello, C., Sampedro, P., Vila, Y., Pennino, M.G.</b>  (2022). 
+	Applying length-based assessment methods to fishery resources in the Bay of Biscay and Iberian Coast ecoregion: Stock status and parameter sensitivity.
+ <a href="https://www.sciencedirect.com/science/article/pii/S0165783621003258?dgcid=author"> Link</a></p></li>	
+
+<li><p align="justify"> Lima ARA; Baltazar-Soares M; Garrido S; <b>Riveiro I; Carrera P</b>; Piecho-Santos M; Peck MA; Silva G (2022). Forecasting shifts in habitat suitability across the distribution range of a temperate small pelagic fish under different scenarios of climate change. Science of The Total Environment.
  <a href="https://www.sciencedirect.com/science/article/pii/S004896972105244X"> Link</a></p></li>	
 
 </ul>		  	 
@@ -76,13 +94,6 @@
             <div id="News16" class="collapse" data-parent="#News-list"> 
               <p>
 	<ul>
-	<li><p align="justify"> <b>Pennino, M.G., Izquierdo, F.</b>, Paradinas, I., <b>Cousido-Rocha, M.</b>, Velasco, F., <b>Cerviño, S.</b> (2022).
-Identifying persistent biomass areas: The case study of the common sole in the northern Iberian waters.
- <a href="https://www.sciencedirect.com/science/article/abs/pii/S0165783621003246"> Link</a></p></li>
-  <li><p align="justify">  <b>Cousido-Rocha, M., Cerviño, S., Alonso-Fernández, A.,
-Gil, J., González Herraiz, I., Rincón, M.M., Ramos, F., Rodríguez-Cabello, C., Sampedro, P., Vila, Y., Pennino, M.G.</b>  (2022).
-Applying length-based assessment methods to fishery resources in the Bay of Biscay and Iberian Coast ecoregion: Stock status and parameter sensitivity.
- <a href="https://www.sciencedirect.com/science/article/pii/S0165783621003258?dgcid=author"> Link</a></p></li> 
 		<li><p align="justify"> Sumaila, U. R., Skerritt, D., Schuhbauer, A., Villasante, S., Cisneros-Montemayor, A. M., Sinan, H., Burnside, D. et al. (<b>Pennino, M. G.</b>) (2021). WTO must ban harmful fisheries subsidies. Science. 374 p 544. 
  <a href="https://www.science.org/doi/10.1126/science.abm1680"> Link</a></p></li>
  	<li><p align="justify"> Steenbeek, J., Buszowski, J., Chagaris, D., Christensen, V., Coll, M., Fulton, E., Katsanevakis, S., Lewis, K., Mazaris, A., Macias, D., Mutsert, K., Oldford, G., <b>Pennino, M. G.</b>,  Piroddi, C., Romagnoni, G., Serpetti, N., Shin, Y., Spence, M., Stelzenmüller, V., (2021). Making spatial-temporal marine ecosystem modelling better – a perspective. Environmental Modelling and Software. 105209.
