papers and congress

--- a/proof/congress.html
+++ b/proof/congress.html
@@ -45,6 +45,35 @@
         </header>
 
         <ul id="News-list" class="wow fadeInUp">
+		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News17"> 2022<i class="ion-android-remove"></i></a>
+            <div id="News17" class="collapse" data-parent="#News-list"> 
+              <p>
+	<ul>
+	
+<li><p align="justify"> Valeiras, J., Abad, E., Velasco, E., Fernández-Franco, J.C., Barreiro, M., Vilas, N. and Pennino, M.G. Fishing discards of rays and skates Rajidae in Galicia waters. Poster communication, VIII International Symposium on Marine Sciences (ISMS), Las Palmas de Gran Canarias, Spain, (4-8th July 2022).
+<a href="https://isms-canarias.com/">Go to the congress.</a></p></li>
+
+<li><p align="justify"> Fernández, J.C., Barreiro, M., Velasco, E. and Valeiras, J. Fishing selectivity and reduction of discards in bottom trawl fisheries at North European Atlantic waters. Poster communication, VIII International Symposium on Marine Sciences (ISMS), Las Palmas de Gran Canarias, Spain, (4-8th July 2022).
+<a href="https://isms-canarias.com/">Go to the congress.</a></p></li>
+
+<li><p align="justify"> Cousido-Rocha, M., Pennino, M.G., Zanni, M.Y., Paz, A. and Cerviño, S. An R-package implementing known-biomass production models considering environmental effects. Poster communication, VIII International Symposium on Marine Sciences (ISMS), Las Palmas de Gran Canarias, Spain, (4-8th July 2022).
+<a href="https://isms-canarias.com/">Go to the congress.</a></p></li>
+
+<li><p align="justify"> Cousido-Rocha, M., Izquierdo, F., Martínez-Minaya, J., Pennino, M.G., Mendes, H., Silva, C., Silva, A., and Cerviño, S. Dealing with unbalanced sampling through bivariate Bayesian regression models: maturity of European hake. Oral communication, The International Statistical Ecology Conference, Cape Town, South Africa, (27th-1th June-July 2022). 
+<a href="https://www.isec2022.org/">Go to the congress.</a></p></li>
+
+<li><p align="justify"> Izquierdo,F., Cardinale, M., Fernandez, C., Cousido-Rocha, M., Pennino,
+MG., Cerviño, S. Assessing sex dimorphic species using Stock Synthesis: the case
+of the Atlantic southern hake stock. Poster communication, The International Statistical Ecology Conference, Cape Town, South Africa, (27th-1th June-July 2022). 
+<a href="https://www.isec2022.org/">Go to the congress.</a></p></li>
+
+<li><p align="justify"> Fuster, A., Conesa, D., Cousido-Rocha, M., Izquierdo,  F., Cerviño, S., Pennino, M.G. Assessment of uncertainty in biomass estimation using different statistical tools employed in fisheries management. Poster communication, XVIII Congreso de Biometría CEBMADRID. Madrid, Spain, (25-27 May 2022). 
+<a href="http://halweb.uc3m.es/cebmadrid/index.html">Go to the congress.</a></p></li>
+</ul>		  	 
+</p>
+            </div>
+          </li>
 		 <li>
             <a data-toggle="collapse" class="collapsed" href="#News16"> 2021<i class="ion-android-remove"></i></a>
             <div id="News16" class="collapse" data-parent="#News-list"> 
