--- a/proof/WS.html
+++ b/proof/WS.html
@@ -45,11 +45,57 @@
         </header>
 
         <ul id="News-list" class="wow fadeInUp">
+		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News16c"> 2022<i class="ion-android-remove"></i></a>
+            <div id="News16c" class="collapse" data-parent="#News-list"> 
+              <p>
+	<ul>
+
+
+	<li> Portuguese survey data for <em>Lepidorhombus boscii</em> (ICES division 9a).
+ <a href="./proof/wd23.pdf">More details</a>
+</li>
+	<li> Spatial standardization of Catch Per Unit Effort (CPUE) indices for the megrim (<em>Lepidorhombus whiffiagonis</em>) and the four-spot megrim (<em>L. boscii</em>) in North Atlantic Iberian waters (ICES divisions 8c and 9a).
+ <a href="./proof/wd24.pdf">More details</a>
+</li>
+
+	<li> Cousido-Rocha, M., Izquierdo, F., Martinez-Minaya, J., Mendes, H., Silva, C., Silva, A.V., Cerviño, S. Maturity ogive for the southern hake stock. WKANGHAKE 2022
+ <a href="./proof/wd27.pdf">More details</a>
+</li>
+
+	<li> Cerviño, S., Michielsens, C., Izquierdo, F., Cousido- Rocha, M. and Pennino, MG. Estimating biological parameters (Linf, k and M) with Bayesian hierarchical analysis based on life history invariants. WKANGHAKE 2022
+ <a href="./proof/wd28.pdf">More details</a>
+</li>
+
+	<li> Cousido-Rocha, M., Izquierdo, F., Mendes, H., Silva, C., Silva, A.V., Cerviño, S. Length-weight analysis for southern hake stock. WKANGHAKE 2022
+ <a href="./proof/wd29.pdf">More details</a>
+</li>
+
+	<li> Otero, J., Izquierdo, F., Cousido-Rocha, M., Aráujo, H., Rodríguez, J., Marín, M., Castro, J., Pennino, MG. and Cerviño, S. Spanish catch and effort data standardization of southern European hake (<em>Merluccius merluccius</em>). WKANGHAKE 2022
+ <a href="./proof/wd30.pdf">More details</a>
+</li>
+
+
+</ul>		  	 
+</p>
+            </div>
+          </li>
 		 <li>
             <a data-toggle="collapse" class="collapsed" href="#News16b"> 2021<i class="ion-android-remove"></i></a>
             <div id="News16b" class="collapse" data-parent="#News-list"> 
               <p>
 	<ul>
+			<li> Weight-length relationships, weight conversion factors and condition in two stocks of
+megrim (<em>Lepidorhombus whiffiagonis</em>): Celtic Seas - northern Bay of Biscay (7.b-k,
+8.abd stock) and northern Iberian waters (8.c, 9.a stock).
+ <a href="./proof/wd25.pdf">More details</a>
+</li>
+
+	<li> Updated maturity parameters based on histology of megrim
+(<em>Lepidorhombus whiffiagonis</em>) and four spot megrim (<em>L. boscii</em>) stocks in
+Atlantic Iberian waters (Div. 8.c, 9.a) and in Celtic Seas (Div. 7.b-k).
+ <a href="./proof/wd26.pdf">More details</a>
+</li>
 <li>  Development of a new stock assessment model with Stock Synthesis 3 (SS3) for hake (Merluccius merluccius) in divisions 8.c and 9.a; Southern stock (Cantabrian Sea and Atlantic Iberian waters).
 
 </li>
@@ -70,7 +116,7 @@
  <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/11816">More details</a>
 </li>
 
-</li> 
+
 <li>  Intersessional Workshop on the IWC Conservation Management Plan for the Southwest Atlantic Southern Right Whale Population (SWA-RW).
 </li>
 <li>  Review of the population structure of hake, megrim, white and black anglerfish, and sardine in the Northeast Atlantic waters.
@@ -98,7 +144,7 @@
  <a href="https://www.researchgate.net/publication/349244241_Preliminary_observation_on_sexual_maturity_of_chub_mackerel_Scomber_colias_in_the_Northern_Iberian_Atlantic_waters_ICES_Divisions_278c_and_279aN">More details</a>
 </li>
 
-
+</li> 
 
 
 
