--- a/index.html
+++ b/index.html
@@ -824,9 +824,12 @@ Below, basic information of the members is shown (emails, social networks, etc),
             <div id="News77" class="collapse" data-parent="#News-list"> <p align="justify"> 
 		Mervex members have been participated in the 
 The International Statistical Ecology Conference
- in Cape Town. Marta Cousido talks about new ideas to deal with bias sampling in ogive estimation. Francisco Izquierdo discussed about: Is it worth to increase the complexity of stock assessment models for species with sex dimorphism?
+ in Cape Town. Marta Cousido talked about new ideas to deal with bias sampling in ogive estimation.
+ Francisco Izquierdo discussed about: Is it worth to increase the complexity of stock assessment models 
+ for species with sex dimorphism? Amina Tifoura explained the impact of natural mortality assumptions on the assessment model performance.
 <a href="https://www.youtube.com/watch?v=2gQl9oCkFWE">Go to the video.</a></p> 
-<a href="img/poster.jfif">Go to the poster.</a></p> 
+<a href="img/poster.jfif">Go to Francisco's poster.</a></p> 
+<a href="img/posterAmina.png">Go to Amina's poster.</a></p> 
 <div align="center"> <img src="img/new77.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
             </div>
          </li>	
