--- a/proof/WS.html
+++ b/proof/WS.html
@@ -316,6 +316,27 @@ data collection for Nephrops FU 25 (North Galicia) in 2018.
         </header>
 
         <ul id="News-list" class="wow fadeInUp">
+		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News14c"> 2022<i class="ion-android-remove"></i></a>
+            <div id="News14c" class="collapse" data-parent="#News-list"> 
+              <p>
+	<ul>
+		<li> Benchmark workshop on anglerfish and hake.
+<a href="https://www.ices.dk/news-and-events/meeting-calendar/Pages/ICES-CalendarDisp.aspx?sd=fa8806b1-282d-ec11-9296-00155d2c0c14">More details.</a>
+</li>	
+							<li> Working Group on Cephalopod Fisheries and Life History.
+<a href="https://www.ices.dk/community/groups/Pages/WGCEPH.aspx">More details.</a>
+</li>									
+			
+						<li> ICES Working Group for the Bay of Biscay and the Iberian Waters Ecoregion.
+<a href="https://www.ices.dk/community/groups/Pages/WGBIE.aspx">More details.</a>
+</li>
+					
+				
+</ul>		  	 
+</p>
+            </div>
+          </li>
 				          		  		  <li>
             <a data-toggle="collapse" class="collapsed" href="#News14"> 2021<i class="ion-android-remove"></i></a>
             <div id="News14" class="collapse" data-parent="#News-list"> 
