--- a/index.html
+++ b/index.html
@@ -968,6 +968,13 @@ The International Statistical Ecology Conference
 <div align="center"> <img src="img/new60.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
             </div>
          </li>
+		 		 										<li> 
+            <a data-toggle="collapse" class="collapsed" href="#News50BIS">  Master's thesis "Application of known biomass production models for the assessment of resources of interest to Spain in Atlantic waters" (11/07/2021) <i class="ion-android-remove"></i></a>
+            <div id="News50BIS" class="collapse" data-parent="#News-list"> <p align="justify"> Mohamed Yosri presents his master's thesis "Application of known biomass production models for the assesment of resources of interest to Spain in Atlantic waters". In this work we use known biomass production models to assess the state of different stocks exploited in the Ecoregion of the Bay of Biscay and the Iberian Coast, the work includes multispecies fits and analysis of the impact of environmental effects on their productivity.
+			 </p>  
+<div align="center"> <a href="img/TFMYOSRIFinal.pdf">Go to the publication.</a></p>    </div>
+            </div>
+         </li>
 		 																		<li>
             <a data-toggle="collapse" class="collapsed" href="#News59"> Bayesian and spatial statistics in fisheries science (05/07/2021) <i class="ion-android-remove"></i></a>
             <div id="News59" class="collapse" data-parent="#News-list"> <p align="justify">
@@ -1046,6 +1053,7 @@ Anglerfishes, megrims, hake, nephrops, pollack and sole stocks have been assesse
 <div align="center"> <img src="img/new51.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
             </div>
          </li>
+
 										<li> 
             <a data-toggle="collapse" class="collapsed" href="#News50"> Workshop for the evaluation of the Iberian sardine HCR (07/05/2021) <i class="ion-android-remove"></i></a>
             <div id="News50" class="collapse" data-parent="#News-list"> <p align="justify"> 
