--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@ The International Statistical Ecology Conference
             </div>
          </li>
 														<li>
-            <a data-toggle="collapse" class="collapsed" href="#News68"> New article "Identifying persistent biomass areas"  (17/01/2021)   <i class="ion-android-remove"></i></a>
+            <a data-toggle="collapse" class="collapsed" href="#News68"> New article "Identifying persistent biomass areas"  (17/01/2022)   <i class="ion-android-remove"></i></a>
             <div id="News68" class="collapse" data-parent="#News-list"> <p align="justify"> 
 			Common sole is a highly valued species in the market, in this new article, pusblished by Impress members, 
 			it's analized which are the areas where this species is most abundant and its temporal persistence.
@@ -991,6 +991,12 @@ the first results of this interesting work: Estimating life history parameters o
 Marta Cousido Rocha presented our recent work "Applying length-based assessment methods to fisheries resources". Check the following link for details.</p>  
 <a href="https://www.youtube.com/watch?v=4iXuOh0xuJw">Link.</a></p> 
 <div align="center"> <img src="img/new58.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+		 		 		 										<li> 
+            <a data-toggle="collapse" class="collapsed" href="#News58BIS">  Master's thesis "Protocol to evaluate the modeling of relative biomass indices" (11/06/2021) <i class="ion-android-remove"></i></a>
+            <div id="News58BIS" class="collapse" data-parent="#News-list"> <p align="justify"> Mohamed Yosri presents his master's thesis "Protocol to evaluate the modeling of relative biomass indices". The objective of this work is to evaluate the accuracy and uncertainty associated with CPUE indices derived from data sources with different spatial information. For this, a standardization of the CPUE indices is carried out using geostatistical models in different spatial scenarios, comparing them with GLMs and GAMs models.
+<div align="center"> <a href="img/TFM_Alba_Fuster_Alonso.pdf">Go to the publication.</a></p>    </div>
             </div>
          </li>
 																		<li>
