--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@ Marta Cousido Rocha presented our recent work "Applying length-based assessment 
          </li>
 		 		 		 										<li> 
             <a data-toggle="collapse" class="collapsed" href="#News58BIS">  Master's thesis "Protocol to evaluate the modeling of relative biomass indices" (11/06/2021) <i class="ion-android-remove"></i></a>
-            <div id="News58BIS" class="collapse" data-parent="#News-list"> <p align="justify"> Mohamed Yosri presents his master's thesis "Protocol to evaluate the modeling of relative biomass indices". The objective of this work is to evaluate the accuracy and uncertainty associated with CPUE indices derived from data sources with different spatial information. For this, a standardization of the CPUE indices is carried out using geostatistical models in different spatial scenarios, comparing them with GLMs and GAMs models.
+            <div id="News58BIS" class="collapse" data-parent="#News-list"> <p align="justify"> Alba Fuster presents her master's thesis "Protocol to evaluate the modeling of relative biomass indices". The objective of this work is to evaluate the accuracy and uncertainty associated with CPUE indices derived from data sources with different spatial information. For this, a standardization of the CPUE indices is carried out using geostatistical models in different spatial scenarios, comparing them with GLMs and GAMs models.
 <div align="center"> <a href="img/TFM_Alba_Fuster_Alonso.pdf">Go to the publication.</a></p>    </div>
             </div>
          </li>
