Add abreviations to models names in a new post

--- a/index.html
+++ b/index.html
@@ -1564,8 +1564,8 @@ Impress Project. "Application of spatial and ecological knowledge in the evaluat
             <div id="News9" class="collapse" data-parent="#News-list">
               <p>
 The aim of this workshop is to identify possible stock-assessment models for data-limited stocks. More precisily, we focus on 
-length-based spawning potential ratio method, 
-length based indicators and surplus production in continuous time model "SPiCt".
+length-based spawning potential ratio (LBSPR) method, 
+length based indicators (LBI) and surplus production in continuous time model (SPiCT).
 <div align="center"><img src="img/new9.jpg" alt="" style="max-width:100%;width:auto;height:auto;"> </div> </p>            
             </div>
           </li>
